--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -20,6 +20,54 @@
     "features2d":"Work seamlessly with your team member in real-time.",
     "features3d":"Keep track of all your tasks and deadlines in one place.",
 
+    "why-planwise":"Why Choose PlanWise?",
+    "mid1":"Task Management",
+    "mid2":"Team Collabration",
+    "mid3":"Customizable Boards",
+    "mid4":"Time Tracking",
+    "mid5":"Secure Platform",
+    "mid6":"Remote Ready",
+    "mid1d":"Easily create, assign, and track tasks in real-time.",
+    "mid2d":"Work seamlessly with your team members across projects.",
+    "mid3d":"Tailor your boards and workflows to fit your needs.",
+    "mid4d":"Monitor project hours and team productivity efficiently.",
+    "mid5d":"Enterprise-grade security for your project data.",
+    "mid6d":"Perfect for distributed teams and remote work.",
+
+    "what-user":"What Our Users Say",
+    "user1":"Frontend Expert in EVO LAB",
+    "user2":"Team Lead at Dungeon Adventure Gang",
+    "user3":"Developer of Mole-Whacker",
+    "user1d":"PlanWise has transformed how our team collaborates. The intuitive interface and powerful features have increased our productivity by 30%.",
+    "user2d":"As a team lead, I needed a solution that gives me visibility while empowering my team. PlanWise delivers exactly that - it's the backbone of our workflow.",
+    "user3d":"The customizable workflows in PlanWise align perfectly with our mole bashing methodology. I can finally track product development with confidence and clarity.",
+
+
+    "bottTit":"EVERYTHING YOU NEED TO SUCCEED",
+    "bott2":"Team Collaboration",
+    "bott3":"Time Tracking",
+    "bott4":"Detailed Analytics",
+    "bott5":"Anywhere Access",
+    "bott6":"Advanced Security",
+    "bott7":"Custom Workflows",
+    "bott1d":"Create, assign, and track tasks with customizable workflows",
+    "bott2d":"Chat, comment, and share files in real-time",
+    "bott3d":"Monitor hours spent on tasks and projects",
+    "bott4d":"Visualize progress with customizable dashboards",
+    "bott5d":"Work from any device, anywhere in the world",
+    "bott6d":"Enterprise-level protection for your data",
+    "bott7d":"Design processes that match your team's needs",
+
+    "startToday":"Get Started with PlanWise Today!",
+    "startTodayd":"Join thousands of teams using PlanWise to boost productivity, enhance collaboration, and achieve more together.",
+    "startTodayButt":"Get Started",
+
+    "footer1":"Company",
+    "footer2":"Privacy Policy",
+    "footer3":"Terms of Service",
+    "footer4":"PlanWise. All rights reserved.",
+    "footer1d":"Streamline your project management with our intuitive and powerful solution.",
+
     "resources1":"About Us",
     "resources2":"FAQ",
     "resources1d":"Learn more about our team and mission",
