--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -110,9 +110,73 @@
     "proMF3d":"Use built-in analytics and reporting tools to ensure projects complete on time and within scope.",
     "proMF4Butt":"Get Started Free",
 
-    "TCH":"",
-    "TCHd":""
+    "TCH":"Team Collaboration",
+    "TCHd":"Organize your teams and distribute work efficiently across your organization.",
+    "TCH2":"Collaborate Better with Teams",
+    "TCH2d":"PlanWise helps you organize team members, assign specific people to tasks, and distribute workload efficiently—just like Trello, but with features tailored to your team's unique needs.",
+    "TCH.1":"Team formation",
+    "TCH.2":"Task assignment",
+    "TCH.3":"Workload balancing",
+    "TCM":"Team Management Tools",
 
-    
+    "TCM1d":"Create specialized teams and organize members by departments, projects, or skills.",
+    "TCM2d":"Assign team members to specific tasks with clear responsibilities and deadlines.",
+    "TCM3d":"Evenly distribute tasks across your team to prevent burnout and maximize efficiency.",
+    "TCM4d":"Define team roles and permissions to streamline workflow and decision making.",
+    "TCM5d":"Set board, list, and card-level permissions to manage who can view and edit content.",
+    "TCM6d":"Customize team visibility, notifications, and collaboration preferences.",
+    "TCM1":"Team Formation",
+    "TCM2":"Member Assignment",
+    "TCM3":"Workload Distribution",
+    "TCM4":"Role Management",
+    "TCM5":"Access Controls",
+    "TCM6":"Team Settings",
+
+    "TCM.Ass":"TASK ASSIGNMENT IN ACTION",
+    "TCM.AssD":"Easily assign tasks to team members and track who's working on what",
+    "TCM.Mark":"Marketing Campaign",
+    "TCM.Mark1":"To Do",
+    "TCM.Mark2":"In Progress",
+    "TCM.Mark3":"Review",
+    "TCM.MarkDes":"Design",
+    "TCM.MarkCon":"Content",
+    "TCM.Mark1.1":"Create social media graphics",
+    "TCM.Mark1.2":"Draft email newsletter",
+    "TCM.Mark2.1":"Update website copy",
+    "TCM.Mark3.1":"Design new landing page",
+    "TCM.MarkFeed":"Feedback Needed",
+    "TCM.MarkRew":"Please review by EOD",
+    "TCM.MarkDate1":"Mar 28",
+    "TCM.MarkDate2":"Apr 2",
+    "BWD":"Balanced Workload Distribution",
+    "BWD1":"Visualize Team Capacity",
+    "BWD2":"Team Performance Insights",
+    "BWD1d":"See at a glance who has bandwidth and who's at capacity to make smart assignment decisions.",
+    "BWD2d":"Track team velocity and completion rates to optimize workflow and identify bottlenecks.",
+    "BWD1.1":"Alex Brown",
+    "BWD1.2":"Chris Johnson",
+    "BDW.OE":"CJ",
+    "BDW.MY":"AB",
+    "BWD1.3":"Emma Lewis",
+    "BWDTask":"tasks",
+    "BWD2.1":"Tasks completed this week",
+    "BWD2.2":"Team velocity",
+    "BWD2.3":"On-time completion",
+    "BWD.D1":"Mon",
+    "BWD.D2":"Tue",
+    "BWD.D3":"Wed",
+    "BWD.D4":"Thu",
+    "BWD.D5":"Fri",
+    "BWD.D6":"Sat",
+    "BWD.D7":"Sun",
+    "TCM.B":"Board",
+
+    "TCF":"Build Better Teams Today",
+    "TCFd":"Start assigning tasks, managing workloads, and collaborating efficiently with PlanWise's team management tools.",
+    "TCFButt":"Get Started",
+
+
+    "faq.title":"Frequently Asked Questions",
+    "faq.subtitle":"Find answers to the most common questions about PlanWise."
     
 }
