--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -106,8 +106,76 @@
     "proMF1d": "Kolay kullanımlı proje oluşturma sihirbazımız ile proje hedeflerini, zaman çizelgelerini ve ekip üyelerini belirleyin.",
     "proMF2d": "Projeleri görevlere ayırın, ekip üyelerine atayın ve ilerlemeyi gerçek zamanlı takip edin.",
     "proMF3d": "Projelerin zamanında ve belirlenen kapsamda tamamlanmasını sağlamak için yerleşik analiz ve raporlama araçlarını kullanın.",
-    "proMF4Butt": "Ücretsiz Başlayın"
+    "proMF4Butt": "Ücretsiz Başlayın",
 
+    "TCH": "Takım İşbirliği",
+    "TCHd": "Ekiplerinizi organize edin ve işlerinizi verimli bir şekilde dağıtın.",
+    "TCH2": "Takımlarla Daha İyi İşbirliği",
+    "TCH2d": "PlanWise, ekip üyelerinizi organize etmenize, belirli kişilere görevler atamanıza ve iş yükünü verimli bir şekilde dağıtmanıza yardımcı olur—Trello gibi ama ekibinizin özel ihtiyaçlarına uygun özelliklerle.",
+    "TCH.1": "Takım oluşumu",
+    "TCH.2": "Görev atama",
+    "TCH.3": "İş yükü dengesi",
+    "TCM": "Takım Yönetim Araçları",
+    
+    "TCM1d": "Özel ekipler oluşturun ve üyeleri departmanlara, projelere veya becerilere göre organize edin.",
+    "TCM2d": "Takım üyelerini belirli görevlere, net sorumluluklar ve son teslim tarihleriyle atayın.",
+    "TCM3d": "İş yükünü ekip içinde eşit bir şekilde dağıtarak tükenmişliği önleyin ve verimliliği artırın.",
+    "TCM4d": "İş akışını ve karar alma süreçlerini kolaylaştırmak için ekip rolleri ve izinler tanımlayın.",
+    "TCM5d": "Kimlerin içeriği görüntüleyip düzenleyebileceğini yönetmek için pano, liste ve kart düzeyinde izinler belirleyin.",
+    "TCM6d": "Ekip görünürlüğünü, bildirimleri ve işbirliği tercihlerini özelleştirin.",
+    "TCM1": "Takım Oluşturma",
+    "TCM2": "Üye Atama",
+    "TCM3": "İş Yükü Dağıtımı",
+    "TCM4": "Rol Yönetimi",
+    "TCM5": "Erişim Kontrolleri",
+    "TCM6": "Ekip Ayarları",
+    
+    "TCM.Ass": "GÖREV ATAMA AKSİYONDA",
+    "TCM.AssD": "Takım üyelerine kolayca görev atayın ve kimin ne üzerinde çalıştığını takip edin",
+    "TCM.Mark": "Pazarlama Kampanyası",
+    "TCM.Mark1": "Yapılacaklar",
+    "TCM.Mark2": "Devam Ediyor",
+    "TCM.Mark3": "İnceleme",
+    "TCM.MarkDes": "Tasarım",
+    "TCM.MarkCon": "İçerik",
+    "TCM.Mark1.1": "Sosyal medya grafikleri oluştur",
+    "TCM.Mark1.2": "E-posta bülteni taslağı hazırla",
+    "TCM.Mark2.1": "Web sitesi metinlerini güncelle",
+    "TCM.Mark3.1": "Yeni açılış sayfası tasarla",
+    "TCM.MarkFeed": "Geri Bildirim Gerekli",
+    "TCM.MarkRew": "Lütfen gün sonuna kadar inceleyin",
+    "TCM.MarkDate1": "28 Mar",
+    "TCM.MarkDate2": "2 Nis",
+    
+    "BWD": "Dengeli İş Yükü Dağıtımı",
+    "BWD1": "Ekip Kapasitesini Görselleştir",
+    "BWD2": "Ekip Performans Analizi",
+    "BWD1d": "Kimin iş yükü hafif, kimin yoğun olduğunu bir bakışta görün ve akıllıca görev atamaları yapın.",
+    "BWD2d": "İş akışını optimize etmek ve darboğazları belirlemek için ekip hızını ve tamamlanma oranlarını takip edin.",
+    "BWD1.1": "Mahmut Yapar",
+    "BWD1.2": "Orhan Esenler",
+    "BDW.OE":"OE",
+    "BDW.MY":"MY",
+    "BWD1.3": "Elmas Lokma",
+    "BWDTask": "görevler",
+    "BWD2.1": "Bu hafta tamamlanan görevler",
+    "BWD2.2": "Ekip hızı",
+    "BWD2.3": "Zamanında tamamlanma",
+    "BWD.D1": "Pzt",
+    "BWD.D2": "Sal",
+    "BWD.D3": "Çar",
+    "BWD.D4": "Per",
+    "BWD.D5": "Cum",
+    "BWD.D6": "Cmt",
+    "BWD.D7": "Paz",
+    "TCM.B": "Pano",
+    
+    "TCF": "Bugün Daha İyi Takımlar Oluşturun",
+    "TCFd": "Görevleri atamaya, iş yüklerini yönetmeye ve PlanWise’ın takım yönetim araçlarıyla verimli bir şekilde işbirliği yapmaya başlayın.",
+    "TCFButt": "Başlayın",
+    
+    "faq.title": "Sıkça Sorulan Sorular",
+    "faq.subtitle": "PlanWise hakkında en yaygın soruların cevaplarını bulun."
 
 }
 
